<resources>
    <string name="app_name">App</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="vaca">Vaca</string>
    <string name="control_bovinium">Control Bovinium</string>
    <string name="calculo_de_peso_de_b_vinos">Calculo de peso de Bóvinos</string>
    <string name="perimetro_tor_xico">Perimetro Toráxico</string>
    <string name="largo_del_cuerpo">Largo del cuerpo</string>
    <string name="calcular">Calcular</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="todoh">TODO</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="produccion">Produccion</string>
    <string name="j">TODO</string>
    <string name="animales">Animales</string>
    <string name="perimetro_toraxico">Perimetro_toraxico</string>
    <string name="kh">kh</string>
    <string name="kg">KG</string>
    <string name="lb">LB</string>




    <string name="item_label">Farmacos</string>
    <string-array name="options_array">
        <item>Kg</item>
        <item>Lb</item>
    </string-array>
    <string-array name="options_array2">
        <item>ml</item>
        <item>μl</item>
    </string-array>

    <string name="farma1">
        Indicaciones \n
        \n Infecciones respiratorias causadas por Pasteurella multocida y Mannheimia haemolytica
        \n Diarreas causadas por Clostridium perfringens
        \n Metritis causadas por Actinomyces pyogenes
        \n Efectos Adversos \n
        La Amoxicilina es un derivado semisintético de la penicilina por lo cual pueden producirse reacciones anafilácticas. En este caso, administrar Epinefrina o similares.
</string>
    <string name="farma2">
        Indicaciones \n
        Está indicada en abscesos, actinomicosis, carbón sintomático, carbón bacteriano, neumonías, neumonías, neumoenteritis en terneros, cistitis, nefritis, podredumbre de las pezuñas, \n
        adenitis equina, leptospirosis, osteomelitis, artritis, onfaloflebitis, infecciones puerperales, septicemia hemorrágica, mastitis.\n

       Efectos Adversos \n
       Ocurren reacciones de hipersensibilidad (especialmente en el ganado bovino), siendo sus manifestaciones comunes reacciones cutáneas, angioedema, fiebre farmacológica, enfermedad del suero, vasculitis, eosinofilia y anafilaxis. La sensibilidad cruzada entre las penicilinas es bien reconocida.

</string>
    <string name="farma3">

        Indicaciones  \n
        Para el tratamiento neumonía, neumoenteritis, tratamiento sistemático de la mastitis, metritis, podo dermatitis infecciosa por anaerobios, fiebre del transporte. \n
        Efectos Adversos \n
        Está indicada para el tratamiento de infecciones respiratorias en dosis de 7-10 mg/ kg. En vacas se utiliza la vía IM o intramamaria (cefalexina monohidratada y benzatínica, 200 mg/ cuarto) para el tratamiento de mastitis por bacterias grampositivas y para el secado, respectivamente.
        Al igual que con eritromicina y otros macrólidos, raramente se han comunicado reacciones alérgicas graves, incluyendo angioedema y anafilaxia. Si ocurre una reacción alérgica, se debe suspender el tratamiento con azitromicina y debe instaurarse una terapia apropiada.
</string>
    <string name="farma4">
        Indicaciones \n
       Es un antibiótico bactericida indicado para el tratamiento de enfermedades causadas por microorganismos Gram positivos, incluyendo anaeróbios.
        \n Efectos Adversos \n
        En dosis recomendadas no presenta efectos
</string>
    <string name="farma5">
             Indicaciones \n
            Para el tratamiento de las mastitis clínicas agudas y subagudas en vacas en lactancia por: Staphilococcus aureus, Micrococcus spp, Staphilococcus epidermidis, Arcanobacterium pyogenes, Staphilococcus agalactiae, Streptococcus dysgalactiae, Escherichia coli, Streptococcus uberis, Klebsiella spp, Streptococcus faecalis, Enterobacter.
             \n Efectos Adversos  \n
            No administrar a animales con historial de hipersensibilidad a la cefoperazona. Animales con historial conocido de alergia a las penicilinas deben ser tratados con especial atención.
</string>
    <string name="farma6">
            Indicaciones \n
            Staphilococcus aureus, Micrococcus spp, Staphilococcus epidermidis, Arcanobacterium pyogenes, Staphilococcus agalactiae, Streptococcus dysgalactiae, Escherichia coli, Streptococcus uberis, Klebsiella spp, Streptococcus faecalis, Enterobacter.
            \n Efectos Adversos \n
           No administrar a animales con historial de hipersensibilidad a la cefoperazona. Animales con historial conocido de alergia a las penicilinas deben ser tratados con especial atención.
</string>
    <string name="farma7">
            Indicaciones \n
            Es un antibiótico de cefalosporina utilizado para el tratamiento de infecciones en el tracto urinario, la piel y los tejidos blandos, los huesos y las articulaciones. Trata las infecciones respiratorias superiores e inferiores como la faringitis, la amigdalitis, la sinusitis, la bronquitis aguda y crónica y la bronconeumonía. También puede tratar la septicemia y la endocarditis.
            \n Efectos Adversos \n
            Los efectos secundarios incluyen diarrea, fiebre, escalofríos, sangrado inusual y aumento de la sed.
</string>
    <string name="farma8">
            Indicaciones \n
            Tratamiento y prevención (metafilaxis) de la enfermedad respiratoria bovina asociada con Mannheimia (Pasteurella) haemolytica, Pasteurella multocida, Haemophillus somnus y Mycoplasma bovis sensibles a tulatromicina. \n
            Tratamiento de la Queratoconjuntivitis Infecciosa Bovina, asociada con Moraxella bovis. \n
            Tratamiento de la Necrobacilosis interdigital de los bovinos (Pietín) asociada con Bacteroides melaninogenicus, Bacteroides nodosus y Fusobacterium necrophorum.
            \n Efectos Adversos \n
            Hipersalivación, excitación, tremores musculares, vómito en pequeñas especies, edema pulmonar y aún convulsiones.
</string>
    <string name="farma9">
            Indicaciones \n
            Para el tratamiento de enfermedades infecciosas causadas por bacterias Gram positivas, Gram negativas y micoplasmas sensibles a la enrofloxacina, básicamente del tracto respiratorio, genito-urinario y digestivo, conducto auditivo y piel. Enfermedad respiratoria bovina, colibacilosis, salmonelosis, neumonía, bronconeumonía, micoplasmosis, dermatitis, mastitis-metritis-agalactia, rinitis, entre otras.
            \n Contraindicaciones \n
            No usar en animales con disfunción hepática, cardiaca o renal y trastornos hemorrágicos o en caso de que exista evidencia de lesiones gastrointestinales ulcero génicas.
</string>
    <string name="farma10">
            Indicaciones \n
            En bovinos, porcinos, ovinos y caninos para el tratamiento de infecciones causadas por Streptococcus sp., Corynebacterium sp. y Mycoplasma sp.
            \n Contraindicaciones  \n
            No usar en animales en caso de hipersensibilidad conocida a la espiramicina, a otros macrólidos y/o a algún excipiente.
</string>
    <string name="farma11">
            Indicaciones \n
            Para el tratamiento de enfermedades respiratorias de los bovinos (también conocida como fiebre de embarque) y su pirexia asociada por Mannheimia haemolytica, Pasteurella multocida, Haemophilus somnus y Mycoplasma bovis
            \n Efectos Adversos \n
            En caso de sobredosificación puede producirse un ablandamiento de las heces, que se normaliza al suspender el tratamiento. Durante el tratamiento puede disminuir el consumo de alimento, el que se normaliza al finalizar el mismo. En animales sensibles pueden producirse shocks alérgicos; en tal caso aplique adrenérgicos y/o antihistamínicos.

</string>

    <string name="farma12">
            Indicaciones \n
            La Furaltadona es un antibiótico nitrofurano bactericida de amplio espectro especialmente indicado contra gérmenes Gram negativos y Gram positivos. Es muy activo contra diferentes variedades de Salmonella, E. coli, Streptococcus y Staphylococcus.
            \n Efectos Adversos \n
            La sobredosificación produce signos nerviosos en todas las especies que van desde incoordinación hasta parálisis, los cuales desparecen en el momento en que se retira el fármaco.
</string>

    <string name="farma13">
            Indicaciones \n
            Está indicado en el tratamiento de infecciones respiratorias, Salmonelosis, gastroenteritis, meningitis y encefalitis causadas por microorganismos sensibles al tianfenicol en terneros
            \n Efectos Adversos \n
            El tianfenicol altera el funcionamiento normal de la microbiota del rumen y el intestino cuando se administra por vía oral.
</string>
</resources>