<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    tools:context=".Pages.PesoCalculo"
    >

    <TextView
        android:id="@+id/txtCalcular"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="90dp"
        android:text="@string/calculo_de_peso_de_b_vinos"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

       <TextView
        android:id="@+id/PT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="190dp"
        android:text="@string/perimetro_toraxico"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/LCTEXT"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="275dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/LC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="290dp"
        android:text="@string/largo_del_cuerpo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/PTTEXT"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="175dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

       <Button
        android:id="@+id/btn_calcularpeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/pesoresultado"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="350dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/KG"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="350dp"
        android:text="@string/kg"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/pesoresultadolibras"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="410dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="VisualLintBounds" />
    <TextView
        android:id="@+id/LB"
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="410dp"
        android:text="@string/lb"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="VisualLintBounds" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="#53BF35"
        android:baselineAligned="false"
        android:orientation="horizontal">

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_gravity="bottom" >

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center|start"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/casa" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center|start"
            android:layout_marginLeft="31dp"
            android:layout_marginBottom="5dp"
            android:text="Home"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center|start"
            android:layout_marginLeft="130dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/vacachica" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center|end"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="Notificaciones"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/imgbtnManejo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center|end"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/barras" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginLeft="55dp"
            android:layout_marginBottom="5dp"
            android:text="Manejo"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/campanas" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:text="Animales"
            android:textSize="12sp" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</FrameLayout>